--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "php": ">=5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10"
+        "phpunit/phpunit": "^10",
+        "squizlabs/php_codesniffer": "*"
     }
 }
