--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -1,22 +1,16 @@
-name: "CI"
+name: Linting
 
 on: [ pull_request, push ]
 
 jobs:
-  phpcs:
+  lint:
+    name: PHP-CS-Fixer
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      - name: Checkout the code
+        uses: actions/checkout@v3
 
-      - name: Install PHP_CodeSniffer
-        run: |
-          curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
-          php phpcs.phar --version
-
-      - uses: thenabeel/action-phpcs@v8
+      - name: Check for code style violation with PHP-CS-Fixer
+        uses: OskarStark/php-cs-fixer-ga@3.7.0
         with:
-          files: "**.php"
-          phpcs_path: php phpcs.phar
-          standard: phpcs.xml
+          args: --diff --dry-run
