--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -11,6 +11,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check for code style violation with PHP-CS-Fixer
-        uses: OskarStark/php-cs-fixer-ga@3.7.0
+        uses: docker://oskarstark/php-cs-fixer-ga
         with:
           args: --diff --dry-run
