--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Examples\\": "examples/"
         }
     },
     "authors": [
